--- a/index.html
+++ b/index.html
@@ -1,2 +1,33 @@
-# carlosms29.github.io
-project website
+<!DOCTYPE HTML>
+<html>
+    <head>
+        <meta charset="utf-8">
+        <title>Carlos Moreno Webpage </title>
+        <style>
+         h1{color:black}
+         h1 {background-color:red;}
+         body{background:white}
+         li{text-decoration:underline;}
+         li{color:black}
+         li{font-size:20px;}
+        </style>
+        
+    </head>
+    <body>
+          <h1>Carlos Moreno Webpage</h1>
+          <p>
+              <ul>
+              <li>
+                  <a href=firstrevision.html> First revision. </a> 
+              </li>
+          </ul>
+ 
+
+           <ul>
+               <li>
+                <a href=secondrevision.html> Second revision. </a>
+               </li>
+           </ul>
+        </p>
+
+    </body>
